--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
-    <title>Kittens</title>
+    <title>Suggestion App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
